# ComfyUI-DiaTest

./: README.md  __init__.py  nodes.py  pyproject.toml  requirements.txt
dia_lib/: audio.py  model.py
example_workflows/: DiaTTS.json
